--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,6 @@
 @font-face {
-    font-family: 'Inter-Bold';
-    src: url('./assets/fonts/static/Inter-Bold.ttf');
-}
-@font-face {
-    font-family: 'Inter-ExtraBold';
-    src: url('./assets/fonts/static/Inter-ExtraBold.ttf');
-}
-@font-face {
-    font-family: 'Inter-Regular';
-    src: url('./assets/fonts/static/Inter-Regular.ttf');
+    font-family: 'Inter';
+    src: url('/assets/fonts/Inter-VariableFont_slnt,wght.ttf');
 }
 :root{
     /* Colors */
@@ -16,6 +8,7 @@
     /* Primary */
     --clr-soft-orange: hsl(35, 77%, 62%);
     --clr-soft-red: hsl(5, 85%, 63%);
+
     /* Neutral */
     --clr-off-white: hsl(36, 100%, 99%);
     --clr-grayish-blue: hsl(233, 8%, 79%);
@@ -26,9 +19,7 @@
 
     /* Body Copy */
     --fs: 15px;
-    --ff-Inter-Regular: 'Inter-Regular'; 
-    --ff-Inter-Bold: 'Inter-Bold'; 
-    --ff-Inter-ExtraBold: 'Inter-ExtraBold'; 
+    --ff-Inter: 'Inter'; 
     --fw-400: 400;
     --fw-700: 700;
     --fw-800: 800;
@@ -40,58 +31,164 @@
     margin: 0;
     padding: 0;
 }
-main{}
+main{
+    margin: 1rem 1rem 0 1rem; 
+    font-family: var(--ff-Inter);
+}
+.header-container{
+    display: inline-flex;
+}
+#navbar-closed-x-icon, #navbar-opened-hamburger-icon{
+    border: 1px solid transparent;
+    margin: 1em 0 2.5em 63vw;
+    background-repeat: no-repeat;
+    background-color: transparent;    
+}
+#header-logo-icon{
+    background-repeat: no-repeat;
+    background-color: transparent;
+    width: 65px;
+    height: 45px;
+    border: 1px solid transparent;
+    background-image: url('/assets/images/logo.svg');
+}
+#navbar-opened-hamburger-icon{
+    width: 40px;
+    height: 19px; 
+    background-image: url('/assets/images/icon-menu.svg');
+}
+#navbar-opened-hamburger-icon:active{
+}
+#navbar-closed-x-icon{
+    width: 32px;
+    height: 31px; 
+    background-image: url('/assets/images/icon-menu-close.svg');
+    display: none;
+}
+/* mobile navbar modal */
+.navbar-container{
+    display: none;
+    background-color: var(--clr-off-white);
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    height: 100vh;
+    width: 75vw;
+}
+.navbar-item-container{
+    display: flex;
+    flex-direction: column;
+    margin: 18vh 0 0 0;
+    width: 100%;
+}
+.navbar-item-container button{
+    font-family: var(--ff-Inter);
+    font-size: var(--fs);
+    font-weight: var(--fw-400);
+    margin: 0 0 1.7em 2em;
+    text-align: left;
+    background-color: transparent;
+    border: 1px solid transparent;
+}
 .main-container{
     display: flex;
     flex-direction: column;   
-    margin: 0 1em 0 1em; 
 }
-.navbar-closed-icon{
-    background-image: url('/assets/images/icon-menu-close.svg');
-    width: 35px;
-    height: 35px;
-    border: 1px solid transparent;
-    position: absolute;
-    right: 50%;
+.main-container .cover-image-container{}
+
+.main-container #title {
+    font-weight: var(--fw-800);
+    font-size: 40px;
+    line-height: 1em;
+    margin: .25em 0 .25em 0;
+}
+.main-container #intro-content{
+    color: var(--clr-dark-grayish-blue);
+    font-weight: 500;
+    font-size: var(--fs);
+    margin-bottom: 1.5em;
+    line-height: 1.7em;
+}
+.main-container #read-more-button{
+    width: 50vw;
+    height: 6vh;
+    font-weight: var(--fw-800);
+    font-size: 12px;
+    letter-spacing: .4em;
+    background-color: var(--clr-soft-red);
+    border: 1px solid var(--clr-soft-red);
+    margin-top: .5em;
+    margin-bottom: 5em;
+}
+.new-content-container{
+    background-color: var(--clr-very-dark-blue);
+    padding: 1.5em;
+    margin-bottom: 3em;
 
 }
-.navbar-opened-icon{
-    background-image: url('/assets/images/icon-menu.svg');
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    right: 25%;
+.new-content-container #new-content-title{
+    font-size: 30px;
+    color: var(--clr-soft-orange);
+    padding: 0 0 1em 0;
 }
-.navbar-container-open{
-    display: none;
+.new-content-container h3, h4, h5{
+    color: var(--clr-off-white);
+    font-weight: var(--fw-700);
+    font-size: 20px;
 }
-#navbar-home{}
-#navbar-new{}
-#navbar-popular{}
-#navbar-trending{}
-#navbar-categories{}
-#title h1{}
-#intro-content{}
-#read-more-button button{}
-.new-content-container{}
-#new-content-title h2{}
-#h3-section-title h3{}
-#h3-child-text p{}
-#h4-section-title h4{}
-#h4-child-text p{}
-#h5-section-title h5{}
-#h5-child-text p{}
-.external-article-container{}
-#01-title p{}
-#01-content p{}
-#01-text p{}
-#02-title p{}
-#02-content p{}
-#02-text p{}
-#03-title p{}
-#03-content p{}
-#03-text p{}
-
-
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.new-content-container hr{
+    margin-bottom: 2em;
+    border: 1px solid var(--clr-dark-grayish-blue);
+}
+.new-content-container #h3-child-text, 
+.new-content-container #h4-child-text{
+    line-height: 2em;
+    padding: .7em 0 2.5em 0;
+    color: var(--clr-grayish-blue);
+    font-size: 14px;
+    font-weight: var(--fw-400);
+}
+.new-content-container #h5-child-text{
+    padding: 1em 0 0 0 ;
+    color: var(--clr-grayish-blue);
+    font-size: 14px;
+    font-weight: var(--fw-400);
+}
+.external-article-container{
+    margin-bottom: 2em;
+}
+.gallery-container{
+    display: flex;
+    margin-bottom: 2em;
+}
+.gallery-container .gallery-image{
+    width: 33%;
+    margin-right: 2.2em;
+    height: 8em;
+}
+.gallery-container .gallery-title{
+    font-size: 30px;
+    color: var(--clr-soft-red);
+    font-weight: var(--fw-800);
+}
+.gallery-container .gallery-content{
+    margin: .5em 0 .5em 0;
+    font-weight: var(--fw-800);
+    font-size: 17px;
+}
+.gallery-container .gallery-text{
+    color: var(--clr-dark-grayish-blue);
+    font-size: 14px;
+    line-height: 2em;
+}
+.attribution { 
+    color: var(--clr-dark-grayish-blue);
+    font-size: 12px;
+    font-weight: var(--fw-800);
+    text-align: center; 
+    margin-bottom: 2em;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
