--- a/styles/index.css
+++ b/styles/index.css
@@ -46,6 +46,17 @@ main {
 }
 
 /* Mobile Navbar Modal */
+@keyframes openModal
+{
+    0% { opacity: 0; display: none; }
+    100% { opacity: 1; display: flex; }
+}
+@keyframes closeModal
+{
+    100% { opacity: 1; display: flex; }
+    0% { opacity: 0; display: none; }
+}
+
 #header-logo-icon {
     background-repeat: no-repeat;
     background-color: transparent;
@@ -81,13 +92,20 @@ main {
     border: 1px solid var(--clr-off-white);
     display: flex;
     background-color: var(--clr-off-white);
-    position: absolute;
+    position: absolute;    
+    height: 100vh;
+    width: 75%;
     top: 50%;
     left: 70%;
     transform: translate(-50%, -50%);
-    height: 100vh;
-    width: 75%;
+}
+
+.navbar-modal:not([open]) {
     display: none;
+}
+
+.navbar-modal[open] {
+    animation: openModal 500ms linear
 }
 
 .navbar-item-container {
