--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 /* Font Face */
 @font-face {
     font-family: 'Inter';
-    src: url('/assets/fonts/Inter-VariableFont_slnt,wght.ttf');
+    src: url('../assets/fonts/Inter-VariableFont_slnt,wght.ttf');
 }
 
 /* Root Variables */
@@ -63,7 +63,7 @@ main {
     width: 65px;
     height: 45px;
     border: 1px solid transparent;
-    background-image: url('/assets/images/logo.svg');
+    background-image: url('../assets/images/logo.svg');
 }
 
 #navbar-opened-hamburger-icon {
@@ -75,7 +75,7 @@ main {
     right: 3vw;
     width: 40px;
     height: 19px;
-    background-image: url('/assets/images/icon-menu.svg');
+    background-image: url('../assets/images/icon-menu.svg');
 }
 
 #navbar-closed-x-icon {
@@ -84,7 +84,7 @@ main {
     position: absolute;
     width: 35px;
     height: 35px;
-    background-image: url('/assets/images/icon-menu-close.svg');
+    background-image: url('../assets/images/icon-menu-close.svg');
     background-repeat: no-repeat;
 }
 
