--- a/styles/index.css
+++ b/styles/index.css
@@ -37,7 +37,6 @@
 main {
     margin: 1rem 1rem 0 1rem;
     font-family: var(--ff-Inter);
-    overflow-y: hidden;
 }
 
 /* Header */
@@ -46,15 +45,14 @@ main {
 }
 
 /* Mobile Navbar Modal */
-@keyframes openModal
-{
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+@keyframes openModal {
+    0% { left: 100%; }
+    100% { left: 66%; }
 }
 @keyframes closeModal
 {
-    0% { opacity: 1; }
-    100% { opacity: 0; }
+    0% { left: 66%; }
+    100% { left: 100%; }
 }
 
 #header-logo-icon {
@@ -64,11 +62,12 @@ main {
     height: 45px;
     border: 1px solid transparent;
     background-image: url('../assets/images/logo.svg');
+    margin-bottom: 3em;
 }
 
 #navbar-opened-hamburger-icon {
     border: 1px solid transparent;
-    margin: 1em 0 2.5em 0;
+    margin-top: 1em;
     background-repeat: no-repeat;
     background-color: transparent;
     position: absolute;
@@ -79,8 +78,8 @@ main {
 }
 
 #navbar-closed-x-icon {
-    top: 3%;
-    right: 15%;
+    top: 2.5vh;
+    right: 3vw;
     position: absolute;
     width: 35px;
     height: 35px;
@@ -91,36 +90,37 @@ main {
 .navbar-modal {
     border: 1px solid var(--clr-off-white);    
     background-color: var(--clr-off-white);
-    position: absolute;    
-    height: 100vh;
-    width: 75%;
-    top: 50%;
-    left: 70%;
+    height: 110vh; /* needed to prevent any gap in navbar */
+    width: 65vw;
+    top: 55%;
     transform: translate(-50%, -50%);    
-}
-.navbar-modal::backdrop {
-    background-color: transparent;
-    /* may prevent click events? */
+    position: fixed;
 }
 
-.navbar-modal:not([open]) {    
-    display: none;    
+.navbar-modal::backdrop {
+    background-color: transparent;
+    /* may prevent click events when modal is open?? */
+}
+
+.navbody{
+    overflow-y: hidden;
 }
 
 .navbar-modal[open] {
-    animation: openModal 500ms forwards;    
+    animation: openModal 0.3s ease forwards;    
 }
 .navbar-modal[closing] {
-    animation: closeModal 500ms forwards;
+    animation: closeModal 0.3s ease forwards;
 }
 
 .navbar-item-container {
     display: flex;
     flex-direction: column;
-    margin: 8em 0 0 0;
+    margin-top: 13em;
 }
 
-.navbar-item-container button {
+.navbar-item-container li {
+    list-style-type: none;
     font-family: var(--ff-Inter);
     font-size: var(--fs);
     font-weight: var(--fw-400);
@@ -134,6 +134,10 @@ main {
 .main-container {
     display: flex;
     flex-direction: column;    
+}
+
+#image-web-3-desktop{
+    display: none;
 }
 
 .main-container #title {
@@ -217,7 +221,7 @@ main {
 .gallery-container .gallery-image {
     width: 33%;
     margin-right: 2.2em;
-    height: 8em;
+    min-height: 8em;
 }
 
 .gallery-container .gallery-title {
@@ -249,4 +253,27 @@ main {
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+@media screen and (min-width: 800px){
+
+    #navbar-opened-hamburger-icon{
+        display: flex;
+    }
+    .navbar-item-container li{
+        left: 50%;
+        right: 50%;
+        transform: translate(-50% -50%);
+        position: absolute;
+        background-color: red;
+    }
+
+    #image-web-3-mobile {
+        display: none;
+    }
+
+    #image-web-3-desktop {
+        display: flex;
+    }
+    
 }
