--- a/styles/index.css
+++ b/styles/index.css
@@ -75,7 +75,7 @@ main {
     right: 5vw;
     width: 40px;
     height: 19px;
-    background-image: url('../assets/images/icon-menu.svg');
+    background-image: url('./assets/images/icon-menu.svg');
 }
 
 #mobile-navbar-closed-x-icon {
