update styles/index.css realtive link Bug fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -84,7 +84,7 @@ main {
     position: absolute;
     width: 35px;
     height: 35px;
-    background-image: url('/assets/images/icon-menu-close.svg');
+    background-image: url('../assets/images/icon-menu-close.svg');
     background-repeat: no-repeat;
 }
 
